standardise name format, resolve spacing table issues on ale sections

--- a/src/app/core/components/sortable-table/sortable-table.component.scss
+++ b/src/app/core/components/sortable-table/sortable-table.component.scss
@@ -15,6 +15,7 @@
   position: relative;
   max-width: 100%;
   overflow-x: auto;
+  overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
 }
 
